fix: remove any extra margins on filters added by external UI frameworks - small misalgnment issue found in SF code that uses Bootstrap in external pages

--- a/packages/common/src/styles/slick-filters.scss
+++ b/packages/common/src/styles/slick-filters.scss
@@ -5,6 +5,10 @@
 // ------------------------------------------------
 
 .slick-headerrow {
+  // remove any BS margins, fixes issue found in SF using BS theme
+  .search-filter.form-group {
+    margin: 0;
+  }
   input.search-filter.filled,
   .search-filter.filled input,
   .search-filter.filled .date-picker input,
